# collector

./: .gitignore  README.md  pyproject.toml
collector/: _constants.py  _exception.py  _log.py  _utils.py
collector/_base/: _transport.py  _utils.py  client.py  datamodel.py  models.py  post.py  utils.py
collector/fanbox/: client.py  datamodel.py  models.py
